ChangeLog for varconf

Wednesday, November 7, 2001 -- Ron Steinke <rsteinke@w-link.net>
  * dynvar.h: Forgot the "inline" keyword. Oops.

Wednesday, November 7, 2001 -- Ron Steinke <rsteinke@w-link.net>
  * Changed the Variable class to a smart pointer to its old implementation,
    essentially %s/Variable/VarBase/g, then wrote a new Variable class
    based on SigC::Handle with the Variable API added.
  + added dynbase.h, dynbase.cpp, dyntypes.h, dyntypes.cpp,
    dyncmp.h, dyncmp.cpp, dynvar.h; these provide derived types
    of VarBase which dynamically depend on the configuration
    variables in Config::inst(), the user interface (for most
    purposes) consists of the functions in dynvar.h which
    deal only with class Variable
  + added doc/.cvsignore, doc/old/.cvsignore to ignore Makefile, Makefile.in
  * modified tests/.cvsignore to ignore .libs directory
  * modified varconf/.cvsignore to ignore new .lo objects
  * modified varconf.spec.in to add new header files

Saturday, August 4, 2001 -- Joseph A. Zupko <jaz147@psu.edu>
  * fixed outdated information, formatting and wording in README.
  * minor fixes to config.cpp

Sunday, May 27, 2001 -- Joseph A. Zupko <jaz147@psu.edu>
  + added varconf.spec.in
  * fixed some problems with varconf.spec
  + added doc/Makefile.am
  + added doc/old/Makefile.am
  - configure.am
  * updated AM_PATH_SIGC macro to latest version (sigc++ 1.0.3)
  * overhauled configuration.in and all Makefile.am
  * updated varconf version to 0.5.0

Saturday, May 19, 2001 -- Joseph A. Zupko <jaz147@psu.edu>
  * Changed license of varconf to LGPL.

Tuesday, December 12, 2000 -- Joseph A. Zupko <jaz147@psu.edu>
  * Config.h: Added "super-verbose" callback.
  * Config.h: Added << operator.
  * Config.h: Added >> operator.
  * Config.h: Added == operator.
  * Config.h: Made constructors non-protected.
  * Config.h: Added error signal.
  * config.cpp: Redirected all error messages through error signal.